<resources>
    <string name="app_name">1Homework</string>
    <string name="hint">Enter Text Here</string>
    <string name="value1">"Value 1: " </string>
    <string name="value2">"Value 2: " </string>
    <string name="operator">"Operator: " </string>
    <string name="calculate">"Calculate" </string>
    <string-array name="operators">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>
</resources>
